Round Duration for better lisibility

--- a/app/views/BuildController/Detail.html
+++ b/app/views/BuildController/Detail.html
@@ -4,7 +4,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/projects/{{.build.ProjectToBuild.Name}}/builds/">
                 <img alt="GoGo Build" src="">
             </a>
         </div>
