--- a/app/views/BuildController/Index.html
+++ b/app/views/BuildController/Index.html
@@ -50,6 +50,7 @@
             <th>Update Duration</th>
             <th>Refs</th>
             <th>State</th>
+            <th>Action</th>
 
             {{range .builds}}
             {{if eq .State.String "Success"}}
