Add build and deploy button

--- a/app/views/BuildController/Index.html
+++ b/app/views/BuildController/Index.html
@@ -41,7 +41,8 @@
                         {{end}}
                         <option value="updateWorker">Update Builder</option>
                     </select>
-                    <input class="btn btn-success" type="submit" value="Build" />
+                    <input class="btn btn-success" type="submit" name="submitBuild" value="Build" />
+                    <input class="btn btn-warning" type="submit" name="submitDeploy" value="Build&Deploy"/>
                 </form>
                 {{end}}
             </div>
