--- a/app/views/BuildController/Index.html
+++ b/app/views/BuildController/Index.html
@@ -1,11 +1,11 @@
 {{set . "title" "Builds Index"}}
 {{template "header.html" .}}
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-static-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">
-                <img alt="GoGo Build" src="">
+            <a class="navbar-brand" href="/">
+                GoGo Build
             </a>
         </div>
     </div>
